--- a/front/src/Home/Pagination.css
+++ b/front/src/Home/Pagination.css
@@ -1,5 +1,6 @@
 .pagination {
   display: flex;
+  height: 3rem;
   justify-content: space-between;
   font-style: italic;
 }
